--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,54 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+executors:
+  docker-publisher:
+    environment:
+      REPO_NAME: teknofile
+      IMAGE_NAME: tkfbase
+    docker:
+      - image: circleci/buildpack-deps:stretch
+jobs:
+  build:
+    executor: docker-publisher
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+          name: Build Docker image
+          command: docker build -t ${REPO_NAME}/${IMAGE_NAME}:latest .
+      - run:
+          name: Archive Docker Image
+          command: docker save -o image.tar ${REPO_NAME}/${IMAGE_NAME}:latest
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
+  publish-latest:
+    executor: docker-publisher
+    steps:
+      - attach_workspace:
+          at: /tmp/workspace
+      - setup_remote_docker
+      - run:
+          name: Load Docker Image From Workspace
+          command: docker load -i /tmp/workspace/image.tar
+      - run:
+          name: Publish Docker To Docker Hub
+          command: |
+            echo "${DOCKERHUB_PASS}" | docker login -u "${DOCKERHUB_USERNAME}" --password-stdin
+            docker push ${REPO_NAME}/${IMAGE_NAME}:latest
 workflows:
-  # Name the workflow "welcome"
-  welcome:
-    # Run the welcome/run job in its own container
+  version: 2
+  build-master:
     jobs:
-      - welcome/run
+      - build:
+          context: Docker Context
+          filters:
+            branches:
+              only: master
+      - publish-latest:
+          context: Docker Context
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
