i really hate yaml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ workflows:
       - publish-tag:
           context: DockerPublishInfo
           requires:
-            - build:
+            - build
           filters:
             tags:
               only: /^v.*/
