--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,13 +40,13 @@ jobs:
             docker push ${IMAGE_NAME}:${CIRCLE_SHA1}
       - run:
           name: Sync Read-Mes
-          command: |
-            docker run --rm=true \
-              -e DOCKERHUB_USERNAME="${DOCKER_USER}" \
-              -e DOCKERHUB_PASSWORD="${DOCKER_PASS}" \
-              -e GIT_REPOSITORY= ${GITHUB_REPO} \
-              -e DOCKER_REPOSITORY= ${IMAGE_NAME} \
-              -e GIT_BRANCH=${CIRCLE_BRANCH} \
+          command: 
+            - >-
+              docker run --rm=true 
+              -e DOCKERHUB_USERNAME="${DOCKER_USER}" -e DOCKERHUB_PASSWORD="${DOCKER_PASS}"
+              -e GIT_REPOSITORY= ${GITHUB_REPO}
+              -e DOCKER_REPOSITORY= ${IMAGE_NAME}
+              -e GIT_BRANCH=${CIRCLE_BRANCH}
               lsiodev/readme-sync bash -c 'node sync'
   publish-tag:
     executor: docker-publisher
