testing docker in circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ executors:
     environment:
       GITHUB_REPO: teknofile/docker-cacti
       IMAGE_NAME: teknofile/tkf-docker-cacti
-      DOCKER_CLI_EXPERIMENTAL: enabled
-      DOCKER_BUILDKIT: 1
+      #DOCKER_CLI_EXPERIMENTAL: enabled
+      #DOCKER_BUILDKIT: 1
     docker:
       - image: circleci/buildpack-deps:stretch
 jobs:
