--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,11 @@ jobs:
       - setup_remote_docker:
           version: 18.09.3
       - run:
-          name: Testing Docker
+          name: Testing Docker Version
           command: docker version
+      - run:
+          name: Build the Buildx extension
+          command: docker build --platform=local -o . git://github.com/docker/buildx
       - run:
           name: Build Docker Image
           command: docker build -t ${IMAGE_NAME}:latest .
@@ -34,6 +37,7 @@ jobs:
       - attach_workspace:
           at: /tmp/workspace
       - setup_remote_docker
+          version: 18.09.3
       - run:
           name: Load Docker Image From Workspace
           command: docker load -i /tmp/workspace/image.tar
@@ -59,6 +63,7 @@ jobs:
       - attach_workspace:
           at: /tmp/workspace
       - setup_remote_docker
+          version: 18.09.3
       - run:
           name: Load Archived Docker Image
           command: docker load -i /tmp/workspace/image.tar
