rebased to ubuntu custom image

--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -1,6 +1,6 @@
 ## Version 2018/08/16 - Changelog: https://github.com/linuxserver/docker-baseimage-alpine-nginx/commits/master/root/defaults/nginx.conf
 
-user abc;
+user tkf;
 worker_processes 4;
 pid /run/nginx.pid;
 include /etc/nginx/modules/*.conf;
